package ChatPacket;

message Chat
{
	required string ChatMessage = 1;
	
}